chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: buy-better
  name: core-api-service

spec:
  selector:
    app: core-api
  type: ClusterIP
  ports:
    - name: core-api-cip
      port: 3030
      targetPort: 3030
