chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: buy-better
  name: bb-core-nginx
  labels:
    app.kubernetes.io/name: bb-core-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /core/(.*)
            pathType: Prefix
            backend:
              service:
                name: core-api-service
                port:
                  number: 3030
